[package]
name = "staten"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = {version = "0.21.0", features = ["url"]}
tokio = { version = "1.28.2", features = ["full"] }
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"]}
influxdb = { version = "0.6", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
